--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "landing-page",
   "version": "1.0.0",
-  "description": "[Servir.me](https://github.com/MatheusVellone/servir.me) Landing Page -----------------",
+  "description": "Servir.me Landing Page",
   "main": "index.js",
   "scripts": {
     "build": "rimraf build && gulp",
-    "serve": "serve build -o"
+    "serve": "serve src -o",
+    "serve-build": "serve build -o"
   },
   "repository": {
     "type": "git",
