--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf build && gulp",
-    "serve": "serve src -o",
-    "serve-build": "serve build -o"
+    "serve": "serve src",
+    "serve-build": "serve build"
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,10 @@
   },
   "homepage": "https://github.com/MatheusVellone/servir.me-landing-page#readme",
   "devDependencies": {
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-htmlmin": "^4.0.0",
     "gulp-minify-inline": "^1.0.0",
     "rimraf": "^2.6.2",
-    "serve": "^6.4.9"
+    "serve": "^10.0.0"
   }
 }
